force-app/main/default/objects/RE_ExternalFXMappings__c/RE_ExternalFXMappings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RE_ExternalFXMappings</label>
</CustomObject>