force-app/main/default/objects/RE_ExternalFXMappings__c/fields/RE_External_Currency__c.field-meta.xml
<CustomField>
    <fullName>RE_External_Currency__c</fullName>
    <label>RE External Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>