force-app/main/default/objects/RE_ExternalFXMappings__c/fields/RE_Forex_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Forex_Name__c</fullName>
    <label>RE Forex Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>