force-app/main/default/objects/RE_ExternalFXMappings__c/fields/RE_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Type__c</fullName>
    <label>RE Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>