force-app/main/default/objects/RE_ExternalFXMappings__c/listViews/All_Columns_View.listView-meta.xml
<ListView>
    <fullName>All_Columns_View</fullName>
    <columns>NAME</columns>
    <columns>RE_External_Currency__c</columns>
    <columns>RE_Forex_Name__c</columns>
    <columns>RE_Base_Unit__c</columns>
    <columns>RE_Conversion_Unit__c</columns>
    <columns>SETUP_TYPE</columns>
    <columns>RE_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Columns View</label>
    <language>en_US</language>
</ListView>